# ScrollMLX

./: .gitignore  CONTRIBUTING.md  README.md  bubble_tea_menu.html  bubble_tea_menu.md  cli.py  index.html  install.sh  menu.html  pomodoro.py  pomodoro_timer.py  pyproject.toml  relay.py  styles.css  tip_splitter.py
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
Scroll/: README.md  build.sh  project.yml  regen-icon.sh
Scroll/Scroll.xcodeproj/: project.pbxproj
Scroll/Sources/Scroll/: AppState.swift  ScrollApp.swift  Theme.swift
Scroll/Sources/Scroll/Models/: ProjectModels.swift
Scroll/Sources/Scroll/Resources/: AppIcon.icns
Scroll/Sources/Scroll/Services/: AuthManager.swift  ContextEngine.swift  Keychain.swift  ProjectStore.swift  SecurityGate.swift  ServerManager.swift  StatusPoller.swift
Scroll/Sources/Scroll/Views/: BootView.swift  KeysView.swift  MenuBarStatus.swift  WebHostView.swift
docs/: ARCHITECTURE.md  FEATURE-MAP-VSCODE.md  PRD.md  RELAY.md
docs/provider-plugins/: EXAMPLE-codemie.md  EXAMPLE-provider-plugin.md
scripts/: check.sh
server/: agent.py  config.py  dual_agent.py  env.py  learn.py  ledger.py  main.py  models.py  orbit.py  prd.py  projects.py  provider_plugins.py  providers.py  pty_session.py  repos.py  schemas.py  secrets.py  skills.py  smc.py  steering.py  tool_registry.py  versions.py
server/tools/: __init__.py  files.py  filesystem.py  media.py  search.py  shell.py  web.py
static/: index.html
tests/: smoke_web.mjs
(+12 files in other folders)
